<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_image_news"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/NewsFontRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_news_source"
        android:textSize="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:textStyle="italic"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_news"
        android:layout_marginStart="@dimen/dp_16" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_news_date"
        style="@style/NewsFontRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date_details"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_news_details"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_400"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/label_example_text"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_news_date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_see_full_story"
        style="@style/NewsFontMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/label_see_full_story"
        android:textSize="@dimen/dp_16"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/tv_news_details"
        app:layout_constraintTop_toBottomOf="@+id/tv_news_details" />

</androidx.constraintlayout.widget.ConstraintLayout>