<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar"
            style="@style/NewsFontMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/mynews_title"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_location"
            style="@style/NewsFontMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_13"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/label_location"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/dp_16" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/ic_baseline_location"
            app:layout_constraintStart_toStartOf="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_coutry"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/iv_location"
            app:layout_constraintEnd_toEndOf="@+id/tv_location"
            app:layout_constraintStart_toEndOf="@+id/iv_location"
            app:layout_constraintTop_toTopOf="@+id/iv_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/navigation"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/news_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>